# spacy_chunk

./: README.md  main.py  pyproject.toml
